Fixed z-index of the submenu

--- a/frontend/src/app/components/templates/header-footer-template/header-footer-template.component.css
+++ b/frontend/src/app/components/templates/header-footer-template/header-footer-template.component.css
@@ -56,6 +56,7 @@ span.menuitem {
 
 .menuitem:hover > .submenu {
 	display: block;
+	z-index: 100;
 }
 
 .submenu-arrow {
